...
                                    offset: Offset(
                                        0, 3), // changes position of shadow
                                  ),
                                ],
                              ),
                              child: Text(
                                "Curious about our info?",
                                textAlign: TextAlign.center,
                              )),
                          Container(
                            alignment: Alignment.center,
                            height: 130,
                            width: 130,
...
                                      0, 3), // changes position of shadow
                                ),
                              ],
                            ),
                            child: ElevatedButton(
                                child: Text(
                                  "Click here for the tweet!",
                                  textAlign: TextAlign.center,
                                ),
                                onPressed: () async {
                                  var tweetID = await getTweetID();

                                  Navigator.push(
...
                                    offset: Offset(
                                        0, 3), // changes position of shadow
                                  ),
                                ],
                              ),
                              child: Text(
                                "Have a look at the most impactful tweet of the day!",
                                textAlign: TextAlign.center,
                              )),
                        ],
                      )
                    ],
                  ),
...
                        """We are a group of University students who are extremely passionate about learning new technologies and developing cutting edge technology and systems.

                      \n For any enquiries please contact us via our email: 
                      onemorebytecos301@gmail.com

                            This code is open source and is available on GitHub: 
                            github.com/COS301-SE-2021/Ptarmigan
                    """,
                        textAlign: TextAlign.center,
                      ))
                    ],
                  ),
                )
...
            )),
        bottomNavigationBar: BottomNavigationBar(
          items: const <BottomNavigationBarItem>[
            BottomNavigationBarItem(icon: Icon(Icons.home), label: "Home"),
            BottomNavigationBarItem(
                icon: Icon(Icons.business), label: "Insights"),
            BottomNavigationBarItem(icon: Icon(Icons.grade), label: "Stocks"),
          ],
          selectedItemColor: Colors.amber[800],
          onTap: _OnItemTapped,
        ));
  }

...
