...
            height: MediaQuery.of(context).size.height,
            width: MediaQuery.of(context).size.width,
            child: Column(
              children: [
                Padding(padding: EdgeInsets.fromLTRB(5, 10, 5, 10)),
                Text(
                  "Historical stock data",
                  style: TextStyle(fontSize: 30),
                ),
                SingleChildScrollView(
                    scrollDirection: Axis.vertical,
                    child: Container(
                      color: bgColor,
...
