...
                  pageBuilder: (_, __, ___) => DashboardScreen(),
                  transitionsBuilder: (_, __, ___, child) => child,
                );
              }
              if (settings.name == '/login') {
                pastFirstLaunch = true;
                //print("Navigator push : /LOGIN");
                return PageRouteBuilder(
                  pageBuilder: (_, __, ___) => Login(),
                  transitionsBuilder: (_, __, ___, child) => child,
                );
              }
              if (settings.name == '/insight') {
...
